--- a/client/templates/about-me.html
+++ b/client/templates/about-me.html
@@ -1,8 +1,8 @@
 ---
 name: about-me
 url: /about-me
-animationIn: slideInRight
-animationOut: slideOutRight
+animationIn: slideInRight easeIn
+animationOut: slideOutRight easeOut
 ---
 
 <div class="grid-block about vertical">
