--- a/client/templates/capstone.html
+++ b/client/templates/capstone.html
@@ -1,8 +1,8 @@
 ---
 name: capstone
 url: /capstone
-animationIn: slideInRight
-animationOut: slideOutRight
+animationIn: slideInRight easeIn
+animationOut: slideOutRight easeOut
 ---
 
 <div class="grid-block capstone vertical">
