--- a/client/templates/fun-finder.html
+++ b/client/templates/fun-finder.html
@@ -1,8 +1,8 @@
 ---
 name: fun-finder
 url: /fun-finder
-animationIn: slideInRight
-animationOut: slideOutRight
+animationIn: slideInRight easeIn
+animationOut: slideOutRight easeOut
 ---
 
 <div class="grid-block fun-finder vertical">
