--- a/client/templates/galvanize-ping-pong.html
+++ b/client/templates/galvanize-ping-pong.html
@@ -1,8 +1,8 @@
 ---
 name: galvanize-ping-pong
 url: /galvanize-ping-pong
-animationIn: slideInRight
-animationOut: slideOutRight
+animationIn: slideInRight easeIn
+animationOut: slideOutRight easeOut
 ---
 
 <div class="grid-block galvanize-ping-pong vertical">
