--- a/client/templates/lyne-up.html
+++ b/client/templates/lyne-up.html
@@ -1,8 +1,8 @@
 ---
 name: lyne-up
 url: /lyne-up
-animationIn: slideInRight
-animationOut: slideOutRight
+animationIn: slideInRight easeIn
+animationOut: slideOutRight easeOut
 ---
 
 <div class="grid-block lyne-up vertical">
