--- a/client/templates/resume.html
+++ b/client/templates/resume.html
@@ -1,8 +1,8 @@
 ---
 name: resume
 url: /resume
-animationIn: slideInRight
-animationOut: slideOutRight
+animationIn: slideInRight easeIn
+animationOut: slideOutRight easeOut
 ---
 
 <div class="grid-block resume vertical">
