--- a/client/assets/scss/app.scss
+++ b/client/assets/scss/app.scss
@@ -9,48 +9,108 @@ body, html {
   padding: 0;
 }
 
-.grid-content .grid-block {
+.accordion {
+  background-color: #F89406;
+  border: none;
+  margin: none;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  border-bottom: 2px solid #356AC3;
+}
+
+.is-active > .accordion-title {
+    background-color: #F89406;
+    color: white;
+}
+
+.accordion:hover {
+  background-color: #F89406;
+}
+
+.accordion-content {
+  background-color: #F89406;
+}
+
+
+.accordion-title {
+  line-height: 1.4em;
+  font-size: 1.4em;
   margin: 0;
+  padding: 0;
+  color: none;
+  background: none;
+  padding: none;
+  color: #fff;
+}
+
+.accordion-title:hover {
+  background-color: #356AC3;
+}
+
+.accordion-title:hover {
+  background: none;
+}
+
+.accordian-content {
+
 }
 
 .grid-block.home{
-  background-color: red;
   height: 100vh;
+  margin-top: 20px;
+  margin-left: 15px;
+  margin-right: 15px;
 }
 
 .grid-block.about{
-  background-color: red;
+  margin-top: 20px;
+  margin-left: 15px;
+  margin-right: 15px;
   height: 100vh;
 }
 
 .grid-block.fun-finder{
-  background-color: red;
+  margin-top: 20px;
+  margin-left: 15px;
+  margin-right: 15px;
   height: 100vh;
 }
 
 
 .grid-block.portfolio{
-  background-color: red;
+  margin-top: 20px;
+  margin-left: 15px;
+  margin-right: 15px;
   height: 100vh;
+  background-image: url('../img/mountains.jpg');
+  background-size: cover;
 }
 
 .grid-block.capstone{
-  background-color: red;
+  margin-top: 20px;
+  margin-left: 15px;
+  margin-right: 15px;
   height: 100vh;
 }
 
 .grid-block.galvanize-ping-pong{
-  background-color: red;
+  margin-top: 20px;
+  margin-left: 15px;
+  margin-right: 15px;
   height: 100vh;
 }
 
 .grid-block.lyne-up{
-  background-color: red;
+  margin-top: 20px;
+  margin-left: 15px;
+  margin-right: 15px;
   height: 100vh;
 }
 
 .grid-block.resume{
-  background-color: red;
+  margin-top: 20px;
+  margin-left: 15px;
+  margin-right: 15px;
   height: 100vh;
 }
 
@@ -78,6 +138,7 @@ body, html {
 .grid-content ul {
   list-style: none;
   margin: 0;
+  padding: 0;
 }
 .grid-content li {
   background-color: #4285F4;
