--- a/client/templates/portfolio.html
+++ b/client/templates/portfolio.html
@@ -1,11 +1,26 @@
 ---
 name: portfolio
 url: /portfolio
-animationIn: slideInRight
-animationOut: slideOutRight
+animationIn: slideInRight easeIn
+animationOut: slideOutRight easeOut
 ---
 
-<div class="grid-block portfolio vertical">
-  <h1>Portfolio</h1>
+<div class="grid-block home vertical">
+  <div class="align-center grid-block shrink">
+    <h1>My Portfolio</h1>
+  </div>
+  <div class="text-center grid-block shrink">
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+    </p>
+  </div>
+  <div class="grid-block">
+    <div class="align-center grid-block">
+      <h3>Sub Header</h3>
+    </div>
+    <div class="align-center grid-block">
+      <h3>Sub Header</h3>
+    </div>
 
-</div>
+
+  </div>
