--- a/client/assets/scss/app.scss
+++ b/client/assets/scss/app.scss
@@ -57,9 +57,12 @@ body, html {
 
 .grid-block.home{
   height: 100vh;
-  margin-top: 20px;
-  margin-left: 15px;
-  margin-right: 15px;
+  background-image: url('https://scontent-dfw1-1.xx.fbcdn.net/hphotos-xpt1/v/t1.0-9/11921882_10206387703565673_3749716728659458376_n.jpg?oh=78c525879bdaa52e6981937b83610695&oe=56802F20');
+  background-size: cover;
+  & h1, p, h3 {
+    color: white;
+
+  }
 }
 
 .grid-block.about{
@@ -82,16 +85,18 @@ body, html {
   margin-left: 15px;
   margin-right: 15px;
   height: 100vh;
-  background-image: url('../img/mountains.jpg');
-  background-size: cover;
 }
 
 .grid-block.capstone{
-  margin-top: 20px;
-  margin-left: 15px;
-  margin-right: 15px;
   height: 100vh;
+  & h1 {
+    text-align: center;
+    margin-top: 20px;
+    color: black;
+  }
 }
+
+
 
 .grid-block.galvanize-ping-pong{
   margin-top: 20px;
