updated single pages

--- a/client/assets/scss/app.scss
+++ b/client/assets/scss/app.scss
@@ -9,62 +9,35 @@ body, html {
   padding: 0;
 }
 
-.accordion {
-  background-color: #F89406;
-  border: none;
-  margin: none;
-  padding-top: 15px;
-  padding-bottom: 15px;
-  border-bottom: 2px solid #356AC3;
-}
-
-.is-active > .accordion-title {
-    background-color: #F89406;
-    color: white;
-}
-
-.accordion:hover {
-  background-color: #F89406;
-}
-
-.accordion-content {
-  background-color: #F89406;
-}
-
-
-.accordion-title {
-  line-height: 1.4em;
-  font-size: 1.4em;
-  margin: 0;
-  padding: 0;
-  color: none;
-  background: none;
-  padding: none;
-  color: #fff;
-}
-
-.accordion-title:hover {
-  background-color: #356AC3;
-}
-
-.accordion-title:hover {
-  background: none;
-}
-
-.accordian-content {
-
-}
-
 .grid-block.home{
   height: 100vh;
-  background-image: url('https://scontent-dfw1-1.xx.fbcdn.net/hphotos-xpt1/v/t1.0-9/11921882_10206387703565673_3749716728659458376_n.jpg?oh=78c525879bdaa52e6981937b83610695&oe=56802F20');
+  background-image: url('./../img/night.png');
   background-size: cover;
   & h1, p, h3 {
     color: white;
-
+  }
+  & h1.home-title {
+    font-size: 5em;
   }
 }
+.grid-block.main {
+  padding-left: 40px;
+  padding-right: 40px;
+  & p {
+    font-size: 1.3em;
+  }
+}
+.grid-block.content {
+  margin-top: 70px;
+}
 
+li.top-link.is-active {
+  background-color: #F89406;
+}
+
+.grid-content a.is-active li{
+  background-color: #F89406;
+}
 .grid-block.about{
   margin-top: 20px;
   margin-left: 15px;
@@ -96,8 +69,6 @@ body, html {
   }
 }
 
-
-
 .grid-block.galvanize-ping-pong{
   margin-top: 20px;
   margin-left: 15px;
@@ -120,15 +91,18 @@ body, html {
 }
 
 .grid-block.links {
-  background-color: #4285F4;
   padding-bottom: 20px;
-  padding-top: 10px;
+  padding-top: 20px;
+  margin-bottom: 20px;
+  background-color: rgba(0,0,0,0.35);
+  margin-left: 300px;
+  margin-right: 300px;
 }
 .grid-block.links a {
-  padding-left: 10px;
-  padding-right: 10px;
-  color: #115CA0;
-  font-size: 1.2em;
+  padding-left: 25px;
+  padding-right: 25px;
+  color: #F89406;
+  font-size: 1.4em;
 }
 
 .grid-block.links a:hover {
@@ -138,6 +112,7 @@ body, html {
 .grid-block.title h1 {
   color: white;
   font-weight: bold;
+  font-size: 1.8em;
 }
 
 .grid-content ul {
@@ -146,7 +121,7 @@ body, html {
   padding: 0;
 }
 .grid-content li {
-  background-color: #4285F4;
+  background-color: #283548;
   padding-top: 15px;
   padding-bottom: 15px;
   color: white;
@@ -159,12 +134,12 @@ body, html {
 }
 
 .grid-block.title {
-  background-color: #4285F4;
+  background-color: #283548;
   color: white;
 }
 
 .grid-block.menu {
-  background-color:#4285F4 ;
+  background-color:#283548 ;
 }
 
 li.top-link {
@@ -172,12 +147,51 @@ li.top-link {
 }
 
 .title-bar.primary {
-  background-color: #4285F4;
+  background-color: #283548;
 }
 
 .button {
-  background-color: #4285F4;
+  background-color: #283548;
 }
 .button:hover {
   background-color: #356AC3;
+}
+
+a.button.contact {
+  background-color: #356AC3;
+  &:hover {
+    background-color: white;
+    color: #356AC3;
+  }
+}
+
+a.button.portfolio {
+  background-color: #356AC3;
+  &:hover {
+    background-color: #F89406;
+  }
+}
+
+.grid-block.portfolio-app {
+  height: 350px;
+  background-image: url('./../img/portfolio.png');
+  background-size: cover;
+}
+
+.grid-block.lyneup-app {
+  height: 350px;
+  background-image: url('./../img/lyne-up.png');
+  background-size: cover;
+}
+
+.grid-block.pingpong-app {
+  height: 350px;
+  background-image: url('./../img/ping-pong.png');
+  background-size: cover;
+}
+
+.grid-block.funfinder-app {
+  height: 350px;
+  background-image: url('./../img/fun-finder.png');
+  background-size: cover;
 }
