--- a/client/templates/portfolio.html
+++ b/client/templates/portfolio.html
@@ -5,22 +5,27 @@ animationIn: slideInRight easeIn
 animationOut: slideOutRight easeOut
 ---
 
-<div class="grid-block home vertical">
+<div class="grid-block portfolio vertical">
+  <div class="align-center grid-block content shrink">
+    <h1 class="lyneup-title">My Portfolio</h1>
+  </div>
+  <div class="grid-block vertical shrink">
+    <div class="text-center grid-block main shrink">
+      <p>This is my Portfolio Site. This has become my go-to location to showcase my projects,
+      and the progress that I have made in 6 months at Galvanize. Some of the resources that have been used are:
+      Foundation-Apps, Foundation 5, SASS, AngularJs, HTML and Gulp.
+      </p>
+      </div>
+    <div class="align-center grid-block shrink">
+      <div class="align-center grid-block portfolio-app large-8">
+
+      </div>
+    </div>
+  </div>
+  <br>
   <div class="align-center grid-block shrink">
-    <h1>My Portfolio</h1>
-  </div>
-  <div class="text-center grid-block shrink">
-    <p>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-    </p>
-  </div>
-  <div class="grid-block">
-    <div class="align-center grid-block">
-      <h3>Sub Header</h3>
-    </div>
-    <div class="align-center grid-block">
-      <h3>Sub Header</h3>
-    </div>
-
+      <a class="large button portfolio" href="#"><i class="fa fa-television"></i> View Live Demo</a>
+      <a class="large button portfolio" href="#"><i class="fa fa-github"></i> Github Repo</a>
 
   </div>
+</div>
