--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -2,25 +2,26 @@
 name: home
 url: /
 animationIn: slideInRight easeIn
-animationOut: slideOutRight easeOut
 ---
 
 <div class="grid-block home vertical">
+  <div class="align-center grid-block content shrink">
+    <h1 class="home-title">Welcome To Me!</h1>
+  </div>
+  <div class="grid-block vertical shrink">
+    <div class="text-center grid-block main shrink">
+      <p> My name is Dylan, and I am a man with a plan. I currently live in Colorado Springs, and travel up to Denver to learn from the wonderful people at Galvanize Full Stack. I am a developer with a desire to learn and a passion for doing it. Continual growth in life is important to me, and what better way to do that than being a developer where the information is constantly and vastly being changed. I am interested in designing and building web applications through initial stages of brainstorming, to design, to actual implementation for the best possible user experience. Another passion of mine in life is sports. It has defined who I am as a person my whole life, and a combination of the two has made me a very happy person. Introducing technology to the world of sports is of great interest to me, and will continue pursuing both for as long as it remains to keep me happy.
+      </p>
+    </div>
+    <div class="align-spaced grid-block links horizontal shrink">
+      <a href="http://github.com/dzincone"><i class="fa fa-github"></i> Github</a>
+      <a href="https://www.linkedin.com/in/dylanzincone"><i class="fa fa-linkedin-square"></i> LinkedIn</a>
+      <a href="#"><i class="fa fa-university"></i> Galvanize</a>
+    </div>
+</div>
   <div class="align-center grid-block shrink">
-    <h1>Title</h1>
-  </div>
-  <div class="text-center grid-block shrink">
-    <p>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-    </p>
-  </div>
-  <div class="grid-block">
-    <div class="align-center grid-block">
-      <h3>Sub Header</h3>
-    </div>
-    <div class="align-center grid-block">
-      <h3>Sub Header</h3>
-    </div>
+
+  <a zf-toggle="contactMe" class="large button contact" href="#">Contact Me</a>
 
 
   </div>
