Updated a few templates pages with images and a little bit of design

--- a/client/templates/galvanize-ping-pong.html
+++ b/client/templates/galvanize-ping-pong.html
@@ -14,7 +14,7 @@ animationOut: slideOutRight easeOut
     <p>Galvanize Ping Pong was inspired by the entire class wanting to play ping pong and not being able
       to keep track of matches and who is playing who. I desined this application to keep track of schedules, opponents,
       and who has won or lost. Resources used for this application were: Nodejs, Express, MongoDB, Monk, HTML, CSS, and
-      Javascript. This was my first real introduction into User Authentication. 
+      Javascript. This was my first real introduction into User Authentication.
     </p>
     </div>
   <div class="align-center grid-block shrink">
@@ -26,7 +26,7 @@ animationOut: slideOutRight easeOut
 <br>
 <div class="align-center grid-block shrink">
     <a class="large button portfolio" href="#"><i class="fa fa-television"></i> View Live Demo</a>
-    <a class="large button portfolio" href="#"><i class="fa fa-github"></i> Github Repo</a>
+    <a class="large button portfolio" href="https://github.com/dzincone/pong-project"><i class="fa fa-github"></i> Github Repo</a>
 
 </div>
 </div>
