--- a/client/templates/lyne-up.html
+++ b/client/templates/lyne-up.html
@@ -26,7 +26,7 @@ animationOut: slideOutRight easeOut
 <br>
 <div class="align-center grid-block shrink">
     <a class="large button portfolio" href="#"><i class="fa fa-television"></i> View Live Demo</a>
-    <a class="large button portfolio" href="#"><i class="fa fa-github"></i> Github Repo</a>
+    <a class="large button portfolio" href="https://github.com/dzincone/lyne-up"><i class="fa fa-github"></i> Github Repo</a>
 
 </div>
 </div>
