--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -6,11 +6,14 @@ animationIn: slideInRight easeIn
 
 <div class="grid-block home vertical">
   <div class="align-center grid-block content shrink">
-    <h1 class="home-title">Welcome To Me!</h1>
+    <h1 class="home-title">Dylan <span>Zincone</span></h1>
   </div>
   <div class="grid-block vertical shrink">
-    <div class="text-center grid-block main shrink">
-      <p> My name is Dylan, and I am a man with a plan. I currently live in Colorado Springs, and travel up to Denver to learn from the wonderful people at Galvanize Full Stack. I am a developer with a desire to learn and a passion for doing it. Continual growth in life is important to me, and what better way to do that than being a developer where the information is constantly and vastly being changed. I am interested in designing and building web applications through initial stages of brainstorming, to design, to actual implementation for the best possible user experience. Another passion of mine in life is sports. It has defined who I am as a person my whole life, and a combination of the two has made me a very happy person. Introducing technology to the world of sports is of great interest to me, and will continue pursuing both for as long as it remains to keep me happy.
+    <div class="text-center grid-block main-home shrink">
+      <p> My name is Dylan, and I am a man with a plan. I currently live in Colorado Springs, and travel up to Denver to learn from the wonderful people at Galvanize Full Stack. I am a developer with a desire to learn and a passion for doing it.
+        <br>
+        <br>
+        Continual growth in life is important to me, and what better way to do that than being a developer where the information is constantly and vastly being changed. I am interested in designing and building web applications through initial stages of brainstorming, to design, to actual implementation for the best possible user experience.
       </p>
     </div>
     <div class="align-spaced grid-block links horizontal shrink">
