--- a/client/templates/portfolio.html
+++ b/client/templates/portfolio.html
@@ -12,9 +12,32 @@ animationOut: slideOutRight easeOut
   <div class="grid-block vertical shrink">
     <div class="text-center grid-block main shrink">
       <p>This is my Portfolio Site. This has become my go-to location to showcase my projects,
-      and the progress that I have made in 6 months at Galvanize. Some of the resources that have been used are:
-      Foundation-Apps, Foundation 5, SASS, AngularJs, HTML and Gulp.
+      and the progress that I have made in 6 months at Galvanize. Creating a portfolio was a chance for me to dig into something new.
+      I discovered Foundation Apps as we were getting into Angularjs, and this was great exposure to the conecpt of SPA.
       </p>
+      </div>
+      <div class="align-center grid-block">
+          <h2>Key Resources</h2>
+      </div>
+      <div class="align-spaced grid-block">
+        <div class="align-center grid-block">
+          <p>
+            <i class="fa fa-check"></i> Foundation-Apps
+            <br>
+            <i class="fa fa-check"></i> Foundation 5 SASS/CSS
+            <br>
+            <i class="fa fa-check"></i> AngularJs
+          </p>
+        </div>
+        <div class="align-center grid-block">
+          <p>
+            <i class="fa fa-check"></i> HTML5
+            <br>
+            <i class="fa fa-check"></i> Gulp
+            <br>
+            <i class="fa fa-check"></i> JQuery
+          </p>
+        </div>
       </div>
     <div class="align-center grid-block shrink">
       <div class="align-center grid-block portfolio-app large-8">
