Updated checked skills

--- a/client/templates/lyne-up.html
+++ b/client/templates/lyne-up.html
@@ -12,10 +12,30 @@ animationOut: slideOutRight easeOut
 <div class="grid-block vertical shrink">
   <div class="text-center grid-block main shrink">
     <p>Lyne Up is a basketball scheduling and league management application. I designed this application for
-      actual production for my youth basketball league. The software that was previously used was only and
-       clunky. Now it is simple, intuitive, and can hold all my data for my league. Resources used for this
-       application are NodeJs, Express, MongoDB, Mongoose, CSS, HTML and Javascript.
+      actual production for my youth basketball league. The software that was previously used was old and
+       clunky. Now it is simple, intuitive, and can hold all my data for my league.
     </p>
+    </div>
+    <div class="align-center grid-block">
+        <h2>Key Resources</h2>
+    </div>
+    <div class="align-spaced grid-block items">
+      <div class="align-center grid-block">
+        <p>
+          <i class="fa fa-check"></i> NodeJs
+          <br>
+          <i class="fa fa-check"></i> Express
+          <br>
+          <i class="fa fa-check"></i> CSS/HTML/Javascript
+        </p>
+      </div>
+      <div class="align-center grid-block">
+        <p>
+          <i class="fa fa-check"></i> MongoDB
+          <br>
+          <i class="fa fa-check"></i> Mongoose
+        </p>
+      </div>
     </div>
   <div class="align-center grid-block shrink">
     <div class="align-center grid-block lyneup-app large-8">
