--- a/client/assets/scss/app.scss
+++ b/client/assets/scss/app.scss
@@ -205,3 +205,7 @@ a.button.portfolio {
   background-image: url('./../img/fun-finder.png');
   background-size: cover;
 }
+
+.items p{
+  color: green;
+}
