--- a/client/templates/galvanize-ping-pong.html
+++ b/client/templates/galvanize-ping-pong.html
@@ -12,10 +12,30 @@ animationOut: slideOutRight easeOut
 <div class="grid-block vertical shrink">
   <div class="text-center grid-block main shrink">
     <p>Galvanize Ping Pong was inspired by the entire class wanting to play ping pong and not being able
-      to keep track of matches and who is playing who. I desined this application to keep track of schedules, opponents,
-      and who has won or lost. Resources used for this application were: Nodejs, Express, MongoDB, Monk, HTML, CSS, and
-      Javascript. This was my first real introduction into User Authentication.
+      to keep track of matches and who is playing who. I designed this application to keep track of schedules, opponents,
+      and who has won or lost. This was my first real introduction into User Authentication.
     </p>
+    </div>
+    <div class="align-center grid-block">
+        <h2>Key Resources</h2>
+    </div>
+    <div class="align-spaced grid-block items">
+      <div class="align-center grid-block">
+        <p>
+          <i class="fa fa-check"></i> NodeJs
+          <br>
+          <i class="fa fa-check"></i> Express
+          <br>
+          <i class="fa fa-check"></i> HTML/CSS/Javascript
+        </p>
+      </div>
+      <div class="align-center grid-block">
+        <p>
+          <i class="fa fa-check"></i> MongoDB
+          <br>
+          <i class="fa fa-check"></i> Monk
+        </p>
+      </div>
     </div>
   <div class="align-center grid-block shrink">
     <div class="align-center grid-block pingpong-app large-8">
