--- a/client/templates/lyne-up.html
+++ b/client/templates/lyne-up.html
@@ -6,47 +6,65 @@ animationOut: slideOutRight easeOut
 ---
 
 <div class="grid-block lyne-up vertical">
-<div class="align-center grid-block content shrink">
-  <h1 class="lyneup-title">Lyne Up</h1>
-</div>
-<div class="grid-block vertical shrink">
-  <div class="text-center grid-block main shrink">
-    <p>Lyne Up is a basketball scheduling and league management application. I designed this application for
-      actual production for my youth basketball league. The software that was previously used was old and
-       clunky. Now it is simple, intuitive, and can hold all my data for my league.
-    </p>
-    </div>
-    <div class="align-center grid-block">
-        <h2>Key Resources</h2>
-    </div>
-    <div class="align-spaced grid-block items">
-      <div class="align-center grid-block">
-        <p>
-          <i class="fa fa-check"></i> NodeJs
-          <br>
-          <i class="fa fa-check"></i> Express
-          <br>
-          <i class="fa fa-check"></i> CSS/HTML/Javascript
-        </p>
-      </div>
-      <div class="align-center grid-block">
-        <p>
-          <i class="fa fa-check"></i> MongoDB
-          <br>
-          <i class="fa fa-check"></i> Mongoose
-        </p>
-      </div>
-    </div>
-  <div class="align-center grid-block shrink">
-    <div class="align-center grid-block lyneup-app large-8">
-
-    </div>
+  <div class="align-center grid-block content shrink">
+    <h1>Lyne Up</h1>
   </div>
-</div>
-<br>
-<div class="align-center grid-block shrink">
-    <a class="large button portfolio" href="#"><i class="fa fa-television"></i> View Live Demo</a>
-    <a class="large button portfolio" href="https://github.com/dzincone/lyne-up"><i class="fa fa-github"></i> Github Repo</a>
-
-</div>
+  <div class="grid-block vertical shrink">
+    <div class="text-center grid-block main shrink">
+      <p>This is my Portfolio Site. This has become my go-to location to showcase my projects,
+      and the progress that I have made in 6 months at Galvanize. Creating a portfolio was a chance for me to dig into something new.
+      I discovered Foundation Apps as we were getting into Angularjs, and this was great exposure to the conecpt of SPA. The grid system is
+      very intuitive, it has custom angular directives, and designed/styled to just the way I want it. Managing Gulp tasks for this project
+      was simple as Foundation-Apps generates a base template for them. Please enjoy the live site and check out other projects!
+      </p>
+    </div>
+      <!-- Left Side -->
+      <div class="align-justify grid-block items">
+        <div class="grid-block large-3">
+          <div class="grid-block vertical">
+            <div class="align-center resources grid-block shrink">
+              <h2>Key Resources</h2>
+            </div>
+            <div class="grid-block keys shrink">
+              <div class="grid-block resources">
+                <div class="align-center grid-block">
+                  <p>
+                    <i class="fa fa-check"></i> Foundation-Apps
+                    <br>
+                    <i class="fa fa-check"></i> Foundation 5 SASS/CSS
+                    <br>
+                    <i class="fa fa-check"></i> AngularJs
+                  </p>
+                </div>
+                <div class="grid-block">
+                  <p>
+                    <i class="fa fa-check"></i> HTML5
+                    <br>
+                    <i class="fa fa-check"></i> Gulp
+                    <br>
+                    <i class="fa fa-check"></i> JQuery
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="grid-block shrink">
+               <div class="align-center resources grid-block">
+                 <h2>1 Week</h2>
+               </div>
+            </div>
+          </div>
+        </div>
+        <!-- Right Side -->
+        <div class="align-right grid-block vertical large-8">
+          <div class="grid-block vertical shrink">
+            <div class="grid-block lyneup-app">
+            </div>
+          </div>
+          <div class="align-center grid-block shrink ">
+              <a class="large button portfolio" href="#"><i class="fa fa-television"></i> View Live Demo</a>
+              <a class="large button portfolio" href="https://github.com/dzincone/portfolio-3"><i class="fa fa-github"></i> Github Repo</a>
+          </div>
+        </div>
+      </div>
+  </div>
 </div>
