--- a/client/assets/scss/_settings.scss
+++ b/client/assets/scss/_settings.scss
@@ -92,7 +92,7 @@
 // We use these to control various global styles
 // $body-background: #fff;
 // $body-font-color: #222;
-// $body-font-family: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
+$body-font-family: 'Open Sans', sans-serif;
 // $body-font-weight: $font-weight-normal;
 // $body-font-style: normal;
 // $body-antialiased: true;
@@ -136,9 +136,9 @@ $primary-color: #2ABB9B;
 // - - - - - - - - - - - - - - -
 
 // We use these to control header font styles
-// $header-font-family: $body-font-family;
-// $header-font-weight: $font-weight-normal;
-// $header-font-style: $font-weight-normal;
+$header-font-family: 'Arimo', sans-serif;
+$header-font-weight: 700;
+$header-font-style: bold;
 // $header-font-color: #222;
 // $header-line-height: 1.4;
 // $header-top-margin: .2rem;
