--- a/client/assets/scss/app.scss
+++ b/client/assets/scss/app.scss
@@ -4,6 +4,7 @@
 body, html {
   margin: 0;
   padding: 0;
+  background-color: #283548;
 }
 
 h1 {
@@ -36,7 +37,7 @@ li {
     color: white;
   }
   & h1.home-title {
-    font-size: 5em;
+    font-size: 6em;
     color: #F89406;
   }
 }
@@ -60,6 +61,10 @@ li {
 
 .grid-block.content {
   margin-top: 20px;
+}
+
+.grid-block.content-home {
+  margin-top: 80px;
 }
 
 li.top-link.is-active {
@@ -198,6 +203,29 @@ li.top-link {
 }
 .button:hover {
   background-color: #356AC3;
+}
+
+a.home-link {
+  text-align: center;
+  & h3{
+      background-color: #F89406;
+      padding-top: 15px;
+      padding-bottom: 15px;
+      padding-left: 20px;
+      padding-right: 20px;
+      font-size: 1.2em;
+      border-right: 2px solid #356AC3;
+      color: #356AC3;
+      background-color: white;
+      margin-bottom: 0;
+    }
+}
+
+a.home-link {
+  & h3:hover{
+  background-color: #356AC3;
+  color: white;
+  }
 }
 
 a.button.contact {
