Updated profile picture, and picture borders

--- a/client/assets/scss/app.scss
+++ b/client/assets/scss/app.scss
@@ -67,6 +67,13 @@ li {
   margin-top: 80px;
 }
 
+.grid-block.profile-pick {
+    height: 120px;
+    background-image: url('./../img/dylan.png');
+    background-size: cover;
+
+}
+
 li.top-link.is-active {
   background-color: #356AC3;
 }
@@ -257,6 +264,7 @@ a.button.portfolio {
   background-image: url('./../img/lyne-up.png');
   background-size: cover;
   margin-bottom: 10px;
+  border: 2px solid orange;
 
 }
 
@@ -265,6 +273,7 @@ a.button.portfolio {
   background-image: url('./../img/ping-pong.png');
   background-size: cover;
   margin-bottom: 10px;
+  border: 2px solid orange;
 
 }
 
@@ -273,6 +282,7 @@ a.button.portfolio {
   background-image: url('./../img/fun-finder.png');
   background-size: cover;
   margin-bottom: 10px;
+  border: 2px solid orange;
 
 }
 
