--- a/client/assets/scss/app.scss
+++ b/client/assets/scss/app.scss
@@ -77,8 +77,11 @@ li {
   margin-top: 20px;
 }
 
-.grid-block.content-home {
-  margin-top: 80px;
+.grid-block.content-home h1{
+  background-color: rgba(255,255,255,0.3);
+  padding-left: 40px;
+  padding-right:40px;
+  border-radius: 10px;
 }
 
 .grid-block.profile-pic {
