Updated a few of the project pages

--- a/client/templates/fun-finder.html
+++ b/client/templates/fun-finder.html
@@ -11,11 +11,11 @@ animationOut: slideOutRight easeOut
   </div>
   <div class="grid-block vertical shrink">
     <div class="text-center grid-block main shrink">
-      <p>This is my Portfolio Site. This has become my go-to location to showcase my projects,
-      and the progress that I have made in 6 months at Galvanize. Creating a portfolio was a chance for me to dig into something new.
-      I discovered Foundation Apps as we were getting into Angularjs, and this was great exposure to the conecpt of SPA. The grid system is
-      very intuitive, it has custom angular directives, and designed/styled to just the way I want it. Managing Gulp tasks for this project
-      was simple as Foundation-Apps generates a base template for them. Please enjoy the live site and check out other projects!
+      <p>Fun Finder was our first group project. After working independantly for the first few months, getting a group project was
+        a great change of pace. I learned a lot from working with other people on the same project and how to trust one another, and
+        accept ideas that are not just your own. We created an application to choose categories, make an API call to Eventful API,
+        and pull in upcoming events in the city that was specified before the search. You can then filter through different events, and like
+        or favorite the ones that were interesting to keep track of in your profile. No longer will anyone be bored on the weekends!
       </p>
     </div>
       <!-- Left Side -->
@@ -29,20 +29,22 @@ animationOut: slideOutRight easeOut
               <div class="grid-block resources">
                 <div class="align-center grid-block">
                   <p>
-                    <i class="fa fa-check"></i> Foundation-Apps
+                    <i class="fa fa-check"></i> NodeJs
                     <br>
-                    <i class="fa fa-check"></i> Foundation 5 SASS/CSS
+                    <i class="fa fa-check"></i> Express
                     <br>
-                    <i class="fa fa-check"></i> AngularJs
+                    <i class="fa fa-check"></i> HTML5/CSS/Javascript
+                    <br>
+                    <i class="fa fa-check"></i> Git Collaboration
                   </p>
                 </div>
                 <div class="grid-block">
                   <p>
-                    <i class="fa fa-check"></i> HTML5
+                    <i class="fa fa-check"></i> MongoDB
                     <br>
-                    <i class="fa fa-check"></i> Gulp
+                    <i class="fa fa-check"></i> Mongoose
                     <br>
-                    <i class="fa fa-check"></i> JQuery
+                    <i class="fa fa-check"></i> Eventful API
                   </p>
                 </div>
               </div>
