--- a/client/templates/portfolio.html
+++ b/client/templates/portfolio.html
@@ -61,8 +61,8 @@ animationOut: slideOutRight easeOut
             </div>
           </div>
           <div class="align-center grid-block shrink ">
-              <a class="large button portfolio" href="#"><i class="fa fa-television"></i> View Live Demo</a>
-              <a class="large button portfolio" href="https://github.com/dzincone/portfolio-3"><i class="fa fa-github"></i> Github Repo</a>
+              <a class="large button portfolio" href="#" target="_blank"><i class="fa fa-television"></i> View Live Demo</a>
+              <a class="large button portfolio" href="https://github.com/dzincone/portfolio-3" target="_blank"><i class="fa fa-github"></i> Github Repo</a>
           </div>
         </div>
       </div>
