updated links for heroku apps

--- a/client/templates/galvanize-ping-pong.html
+++ b/client/templates/galvanize-ping-pong.html
@@ -59,7 +59,7 @@ animationOut: slideOutRight easeOut
             </div>
           </div>
           <div class="align-center grid-block shrink ">
-              <a class="large button portfolio" href="#"><i class="fa fa-television" target="_blank"></i> View Live Demo</a>
+              <a class="large button portfolio" href="https://fierce-beyond-4435.herokuapp.com/"><i class="fa fa-television" target="_blank"></i> View Live Demo</a>
               <a class="large button portfolio" href="https://github.com/dzincone/portfolio-3" target="_blank"><i class="fa fa-github"></i> Github Repo</a>
           </div>
         </div>
