--- a/client/templates/lyne-up.html
+++ b/client/templates/lyne-up.html
@@ -61,7 +61,7 @@ animationOut: slideOutRight easeOut
             </div>
           </div>
           <div class="align-center grid-block shrink ">
-              <a class="large button portfolio" href="#" target="_blank"><i class="fa fa-television"></i> View Live Demo</a>
+              <a class="large button portfolio" href="https://boiling-ravine-6075.herokuapp.com/" target="_blank"><i class="fa fa-television"></i> View Live Demo</a>
               <a class="large button portfolio" href="https://github.com/dzincone/portfolio-3" target="_blank"><i class="fa fa-github"></i> Github Repo</a>
           </div>
         </div>
