--- a/client/templates/portfolio.html
+++ b/client/templates/portfolio.html
@@ -13,7 +13,7 @@ animationOut: slideOutRight easeOut
     <div class="text-center grid-block main shrink">
       <p>This is my Portfolio Site. This has become my go-to location to showcase my projects,
       and the progress that I have made in 6 months at Galvanize. Creating a portfolio was a chance for me to dig into something new.
-      I discovered Foundation Apps as we were getting into Angularjs, and this was great exposure to the conecpt of SPA. The grid system is
+      I discovered Foundation Apps as we were getting into Angularjs, and this was great exposure to the concept of SPA. The grid system is
       very intuitive, it has custom angular directives, and designed/styled to just the way I want it. Managing Gulp tasks for this project
       was simple as Foundation-Apps generates a base template for them. Please enjoy the live site and check out other projects!
       </p>
