Updated resume, need to move to modal

--- a/client/templates/resume.html
+++ b/client/templates/resume.html
@@ -6,6 +6,7 @@ animationOut: slideOutRight easeOut
 ---
 
 <div class="grid-block resume vertical">
-  <h1>Resume</h1>
+  <iframe src="https://resume.creddle.io/embed/gig5x674yb0"
+  width="850" height="1100" seamless></iframe>
 
 </div>
