--- a/client/assets/scss/app.scss
+++ b/client/assets/scss/app.scss
@@ -47,7 +47,7 @@ li {
   height: 100vh;
   background-image: url('./../img/doggy.jpg');
   background-size: cover;
-  background-position: center 15%;
+  background-position: 40% 70%;
   & h1, p, h3 {
     color: white;
   }
@@ -169,6 +169,21 @@ li.top-link.is-active {
   margin-left: 300px;
   margin-right: 300px;
 }
+
+.grid-block.summary {
+  padding-bottom: 10px;
+  padding-top: 20px;
+  padding-left: 20px;
+  padding-right: 20px;
+  margin-top: 80px;
+  background-color: rgba(38, 52, 73, 0.95);
+  margin-left: 300px;
+  margin-right: 300px;
+  & p {
+    font-size: 1.2em;
+  }
+}
+
 .grid-block.links a {
   padding-left: 25px;
   padding-right: 25px;
