--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -15,4 +15,10 @@ animationIn: slideInRight easeIn
   <div class="align-center grid-block content-home shrink">
     <h1 class="home-title">Dylan <span>Zincone</span></h1>
   </div>
+  <div class="align-center grid-block summary shrink">
+    <p> My name is Dylan. I currently live in Colorado Springs, and travel up to Denver to learn from the wonderful people at Galvanize Full Stack.
+      I am a developer with a desire to learn and a passion for doing it. Continual growth in life is important to me, and what better way to do
+      that than being a developer where the information is constantly and vastly being changed. I am interested in designing and building web
+      applications through the full life-cycle.
+  </div>
 </div>
