--- a/client/templates/road-trip.html
+++ b/client/templates/road-trip.html
@@ -5,15 +5,66 @@ animationIn: slideInRight easeIn
 animationOut: slideOutRight easeOut
 ---
 
-<div class="grid-block raod-trip vertical">
+<div class="grid-block road-trip vertical">
   <div class="align-center grid-block content shrink">
     <h1>Road Trip</h1>
   </div>
   <div class="grid-block vertical shrink">
-    <div class="align-center grid-block main shrink">
-      <p>Second group project. Will be done in the middle of September. Very excited to get to use Rails, React, and Google Maps API
-        for this project. Check Back Soon!
+    <div class="text-center grid-block main shrink">
+      <p>Road Trip was designed to create a detailed itinerary for any road trip. This will include all activities, resturaunts, hotels, and
+        any other here and now places you would like to go. The user can add legs to the trip, choose where they want to stop, and plan ahead
+        to make sure their trip is the best experience possible. My final project in the class using resources outside of curriculum. React is awesome and
+        it was nice exposure to learning frameworks on my own from documentation. Working with several parts within Google Maps API was interesting
+        as well. My favorite project I worked on, with many more features to come as I dive deeper into the project.
       </p>
     </div>
+      <!-- Left Side -->
+      <div class="align-justify grid-block items">
+        <div class="grid-block large-3">
+          <div class="grid-block vertical">
+            <div class="align-center resources grid-block shrink">
+              <h2>Key Resources</h2>
+            </div>
+            <div class="grid-block keys shrink">
+              <div class="grid-block resources">
+                <div class="align-center grid-block">
+                  <p>
+                    <i class="fa fa-check"></i> Ruby on Rails
+                    <br>
+                    <i class="fa fa-check"></i> Postgrestql
+                    <br>
+                    <i class="fa fa-check"></i> HTML5/CSS/Javascript
+                  </p>
+                </div>
+                <div class="grid-block">
+                  <p>
+                    <i class="fa fa-check"></i> ReactJs
+                    <br>
+                    <i class="fa fa-check"></i> Google Maps
+                    <br>
+                    <i class="fa fa-check"></i> JQuery
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="grid-block shrink">
+               <div class="align-center resources grid-block">
+                 <h2>3 Weeks</h2>
+               </div>
+            </div>
+          </div>
+        </div>
+        <!-- Right Side -->
+        <div class="align-right grid-block vertical large-8">
+          <div class="grid-block vertical shrink">
+            <div class="grid-block roadtrip-app">
+            </div>
+          </div>
+          <div class="align-center grid-block shrink ">
+              <a class="large button portfolio" href="https://intense-coast-9597.herokuapp.com/" target="_blank"><i class="fa fa-television"></i> View Live Demo</a>
+              <a class="large button portfolio" href="https://github.com/dzincone/road-trip" target="_blank"><i class="fa fa-github"></i> Github Repo</a>
+          </div>
+        </div>
+      </div>
   </div>
 </div>
